# practice-ub18

./: Jenkinsfile
sample_ccp/: CMakeLists.txt
sample_ccp/src/: main.cpp
vars/: something.txt  ubuntu.groovy  welcome.groovy
